# munchi

./: .gitignore  README.MD  backend.py  main.py  pyproject.toml
cogs/: fun.py  moderation.py
cogs/core/: errors.py  info.py  owner.py  ping.py
cogs/dev/: template.py
cogs/ext/: cleanup.py  reactionroles.py  tempvc.py  welcome.py
dashboard/backend/: app.py  discord.py  routes.py  utils.py
dashboard/client/: package.json  svelte.config.js  tailwind.config.cjs
dashboard/client/src/: app.css  app.d.ts  app.html
dashboard/client/src/lib/: auth.ts  config.ts  header.svelte  header.ts  loader.svelte
dashboard/client/src/lib/components/: header.svelte
dashboard/client/src/lib/dashboard/: dashboard.ts  sidebar.svelte
dashboard/client/src/lib/dashboard/servers/: index.svelte  roles.svelte  welcome.svelte
dashboard/client/src/lib/dashboard/servers/components/: dropdown.svelte  input.svelte  textarea.svelte
dashboard/client/src/routes/: __layout.svelte  callback.svelte  index.svelte
dashboard/client/src/routes/dashboard/: index.svelte
dashboard/client/src/routes/dashboard/servers/[slug]/: index.svelte
docs/: embeds.md  roadmap.md
munchi/: bot.py  config.py  db.py  gifs.py
res/: config.toml
