[tool.poetry]
name = "munchi"
version = "0.1.0"
description = "An open-source, multi-functional Discord bot written in Python!"
authors = ["wxllow <willow@wxllow.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
py-cord = {extras = ["voice"], version = "^2.0.0"}
psutil = "^5.9.1"
humanfriendly = "^10.0"
toml = "^0.10.2"
aiohttp = "^3.8.1"
rich = "^12.5.1"
sanic = "^22.6.0"
hikari = "^2.0.0-alpha.109"
Sanic-Cors = "^2.0.1"
PyNaCl = "^1.5.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
